--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -14,7 +14,7 @@
 		"react-scripts": "4.0.3",
 		"web-vitals": "^1.1.2"
 	},
-	"homepage": "https://btdubbzzz.github.io/react-portfolio",
+	"homepage": ".",
 	"scripts": {
 		"build-localhost": "PUBLIC_URL=/ react-scripts build",
 		"predeploy": "npm run build",
